--- a/assithree/index.css
+++ b/assithree/index.css
@@ -11,6 +11,8 @@ body{
     border-radius: 10%;
 }
 .texts{
+    position: relative;
+    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
     padding: 2%;
@@ -48,7 +50,7 @@ h4{
 .button{
     align-self: center;
     position:absolute;
-    margin-top: 370px;
+    margin-top: 400px;
     
 }
 
